--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jegrieve.github.io/myPortfolio",
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.11.4",
