--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jegrieve.github.io/myPortfolio",
+  "homepage": "https://jegrieve.github.io/portfolio",
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.11.4",
